@@ -12,15 +12,9 @@ public interface LrAttribute {
 	String getName();
 
 	/**
-	 * @deprecated since 1.24 in favor of {@link #getJavaType()}.
-	 */
-	@Deprecated
-	String getJavaType();
-
-	/**
 	 * @since 1.24
-     */
+	 */
 	Class<?> getType();
-	
+
 	ASTPath getPathExp();
 }
