@@ -1,8 +1,5 @@
 package com.nhl.link.rest.parser.converter;
 
-import com.nhl.link.rest.LinkRestException;
-
-import javax.ws.rs.core.Response;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -40,19 +37,9 @@ public class Normalizer {
 		}
 	};
 
-	@Deprecated
-	public static Object normalize(Object value, String numericType) {
-		try {
-			return normalize(value, Class.forName(numericType));
-		} catch (ClassNotFoundException e) {
-			throw new LinkRestException(Response.Status.INTERNAL_SERVER_ERROR,
-					"Unknown class: " + numericType, e);
-		}
-	}
-
 	/**
 	 * @since 1.24
-     */
+	 */
 	public static Object normalize(Object value, Class<?> numericType) {
 		TypeNormalizer normalizer = NORMALIZERS.get(numericType);
 		return normalizer == null ? value : normalizer.normalize(value);
