@@ -3,6 +3,7 @@ Release 2.0
 #166 Multiple backends and parallel fetch stage
 #167 Move to Java 8
 #173 Centralized ExecutorService
+#175 Removing API deprecated prior to 2.0
 
 Release 1.24
 
